@@ -1,3 +1,9 @@
+2006-09-06 [paul]	2.4.0cvs158
+
+	* src/prefs_filtering.c
+		fix labels and table element spacing
+		Patch by Fabien Vantard
+
 2006-09-06 [paul]
 
 	2.5.0-rc3 released
